--- a/main.html
+++ b/main.html
@@ -7,6 +7,20 @@
 </head>
 
 <body>
+	<table border="1">
+		<tr>
+			<th>Roll number</th>
+			<th>Name</th>
+		</tr>
+		<tr>
+			<td>0001</td>
+			<td>Fzn</td>
+		</tr>
+		<tr>
+			<td>0002</td>
+			<td>Melmen</td>
+		</tr>
+	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
