--- a/main.html
+++ b/main.html
@@ -8,10 +8,13 @@
 
 <body>
 	<table border="1">
+		<thead>
 		<tr>
 			<th>Roll number</th>
 			<th>Name</th>
 		</tr>
+			</thead>
+		<tbody>
 		<tr>
 			<td>0001</td>
 			<td>Fzn</td>
@@ -20,6 +23,7 @@
 			<td>0002</td>
 			<td>Melmen</td>
 		</tr>
+			</tbody>
 	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
